CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)

PROJECT(ROpenFLUID)

FIND_PACKAGE(OpenFLUID REQUIRED core base ware machine tools)
OPENFLUID_FIND_QT()

INCLUDE_DIRECTORIES(${R_INCLUDES} ${OpenFLUID_INCLUDE_DIRS} ${QT_INCLUDES})


SET(ROpenFLUID_CPP_HPP ROpenFLUID.cpp ROpenFLUIDWrapper.c ROpenFLUID.h)

ADD_LIBRARY(ROpenFLUID SHARED ${ROpenFLUID_CPP_HPP})

TARGET_LINK_LIBRARIES(ROpenFLUID ${OpenFLUID_LIBRARIES} ${QT_LIBRARIES} ${R_LIBRARIES})

SET_TARGET_PROPERTIES(ROpenFLUID PROPERTIES PREFIX "")


IF(NOT WIN32) # Need to force .so on Mac, but Windows needs to be .dll
  SET_TARGET_PROPERTIES(ROpenFLUID PROPERTIES SUFFIX ".so")
ENDIF()  


INSTALL(TARGETS ROpenFLUID LIBRARY DESTINATION . )