CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

# Set policy for Qt on Windows
if(POLICY CMP0020)
 CMAKE_POLICY(SET CMP0020 OLD)
ENDIF()

# Set policy for LOCATION target property
if(POLICY CMP0026)
 CMAKE_POLICY(SET CMP0026 OLD)
ENDIF()


PROJECT(ROpenFLUID)


IF(DEFINED ENV{OPENFLUID_INSTALL_PREFIX})
  SET(CMAKE_PREFIX_PATH "$ENV{OPENFLUID_INSTALL_PREFIX}/lib/cmake")
ENDIF()


FIND_PACKAGE(OpenFLUIDHelpers REQUIRED)

IF(COMMAND OPENFLUID_DETECT_CXX11)
  OPENFLUID_DETECT_CXX11()
ENDIF()


FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
FIND_PACKAGE(OpenFLUID REQUIRED core base ware machine tools fluidx)


INCLUDE_DIRECTORIES(${R_INCLUDES} ${OpenFLUID_INCLUDE_DIRS})

SET(ROpenFLUID_CPP_HPP ROpenFLUIDWrapper.cpp)

ADD_LIBRARY(ROpenFLUID SHARED ${ROpenFLUID_CPP_HPP})

TARGET_LINK_LIBRARIES(ROpenFLUID ${OpenFLUID_LIBRARIES} 
                                 Qt5::Core 
                                 ${R_LIBRARIES})

SET_TARGET_PROPERTIES(ROpenFLUID PROPERTIES PREFIX "")


IF(NOT WIN32) # Need to force .so on Mac, but Windows needs to be .dll
  SET_TARGET_PROPERTIES(ROpenFLUID PROPERTIES SUFFIX ".so")
ENDIF()  


IF(BUILD_WIN32_BINARY)
  INSTALL(TARGETS ROpenFLUID RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}
                             LIBRARY DESTINATION .)
ELSE()
  INSTALL(TARGETS ROpenFLUID LIBRARY DESTINATION .)
ENDIF()

