CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(ROpenFLUID)


IF(DEFINED ENV{OPENFLUID_INSTALL_PREFIX})
  SET(CMAKE_PREFIX_PATH "$ENV{OPENFLUID_INSTALL_PREFIX}/lib/cmake")
ENDIF()


FIND_PACKAGE(OpenFLUIDHelpers REQUIRED)

OPENFLUID_DETECT_CXX14()

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
FIND_PACKAGE(OpenFLUID REQUIRED core base ware machine tools fluidx)


INCLUDE_DIRECTORIES(${R_INCLUDES} ${OpenFLUID_INCLUDE_DIRS})

SET(ROpenFLUID_CPP_HPP ROpenFLUIDWrapper.cpp)

ADD_LIBRARY(ROpenFLUID SHARED ${ROpenFLUID_CPP_HPP})

TARGET_LINK_LIBRARIES(ROpenFLUID ${OpenFLUID_LIBRARIES} 
                                 Qt5::Core 
                                 ${R_LIBRARIES})

SET_TARGET_PROPERTIES(ROpenFLUID PROPERTIES PREFIX "")


IF(NOT BUILD_WINDOWS_BINARY) # Need to force .so on Mac, but Windows needs to be .dll
  SET_TARGET_PROPERTIES(ROpenFLUID PROPERTIES SUFFIX ".so")
ENDIF()


IF(BUILD_WINDOWS_BINARY)
  INSTALL(TARGETS ROpenFLUID RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}
                             LIBRARY DESTINATION .)
ELSE()
  INSTALL(TARGETS ROpenFLUID LIBRARY DESTINATION .)
ENDIF()

